# atlas

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  atlas.yaml.example  pyproject.toml  requirements.txt
atlas/cli/: __init__.py  main.py
atlas/compose/: __init__.py  models.py  parser.py
atlas/config/: __init__.py  config.yaml  loader.py  models.py
atlas/core/: __init__.py  application.py  context.py  registry.py  runtime.py
atlas/database/: __init__.py  engine.py  models.py
atlas/discovery/: __init__.py  hardware.py  network.py  storage.py  system.py
atlas/docker/: __init__.py  manager.py
atlas/events/: __init__.py  bus.py  event.py  types.py
atlas/health/: __init__.py  checks.py
atlas/intelligence/: context.py
atlas/inventory/: __init__.py  models.py  reader.py  writer.py
atlas/knowledge/: queries.py  store.py
atlas/listeners/: __init__.py  database.py  logger.py
atlas/plugins/: __init__.py  base.py  docker.py  loader.py  manager.py
atlas/proxmox/: __init__.py  client.py  discovery.py  models.py
atlas/reporting/: generator.py
atlas/services/: __init__.py  catalog.py  detector.py
docs/: AI_BOOTSTRAP.md  ARCHITECTURE.md  ATLAS_CONTEXT.md  HOMELAB_DESIGN.md  SERVICE_CATALOG.md
docs/chat-history/: atlas-build-log.md
inventory/: atlas.db
test-stack/: docker-compose.yml
